Added search animation to Ebird Lunr

--- a/ebird_lunr.libraries.yml
+++ b/ebird_lunr.libraries.yml
@@ -3,8 +3,9 @@ search:
   js:
     node_modules/lunr/lunr.js: {}
     node_modules/gsap/dist/gsap.min.js: {}
-    js/ebird_search.js: {}
     js/build_index.js: {}
+    js/ebird_search.js: {}
+    js/search_animation.js: {}
   dependencies:
     - core/drupal
     - core/jquery
